btn color added

--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -27,6 +27,7 @@ $primary-color: $careysPink;
 $secondary-color: $londonHue;
 $input-color: $silver;
 $overlay-bckcol: rgba(0, 0, 0, 0.6);
+$delete-btn: #cc3300;
 
 // Map
 $colors: (
