--- a/css/styles.css
+++ b/css/styles.css
@@ -632,6 +632,9 @@ button {
   flex: 1;
   padding-top: 2.5em;
 }
+.note__wrap {
+  animation: fade 1s ease-in-out forwards;
+}
 .note__body {
   background: #f5f5f5;
   padding: 1em;
@@ -665,6 +668,16 @@ button {
   float: right;
 }
 
+@keyframes fade {
+  0% {
+    opacity: 0;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 .overlay {
   position: fixed;
   top: 0;
